Fix inconsistant spacing and add line in holdings

--- a/app/assets/stylesheets/components/record.scss
+++ b/app/assets/stylesheets/components/record.scss
@@ -71,6 +71,7 @@
         font-size: 1rem;
         font-weight: 500;
         letter-spacing: initial;
+        padding-top: 9px;
       }
 
       .find-it,
